--- a/2. Machine Learning/Time-Series-Forcasting.ipynb
+++ b/2. Machine Learning/Time-Series-Forcasting.ipynb
@@ -28,7 +28,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\" style=\"background-color:#FFFFFF;color:#000000;border-color:black;width:100%;margin: auto;text-align: center;\"> <b> Conclusion: <b> LSTM achieved the lowest MAE (8.11), indicating that its predictions are the closest to the actual values compared to other models. Thanks to its ability to learn long-term dependencies in sequential data, LSTM has become a popular and effective approach for time series forecasting. <div>"
+    "<div class=\"alert alert-block alert-info\"\n",
+    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
+    "            max-width:900px; margin: 20px auto; text-align: center;\">\n",
+    "  <b>Conclusion:</b> LSTM achieved the lowest MAE (8.11), indicating that its\n",
+    "  predictions are the closest to the actual values compared to other models.\n",
+    "  Thanks to its ability to learn long-term dependencies in sequential data,\n",
+    "  LSTM has become a popular and effective approach for time series forecasting.\n",
+    "</div>"
    ]
   },
   {
@@ -784,7 +791,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\" style=\"background-color:#FFFFFF;color:#000000;border-color:black;width:100%;margin: auto;text-align: center;\"> <b> After applying first differencing, the time series fluctuates around zero without a clear upward or downward trend — indicating stationarity. Therefore, the differencing order (d) for ARIMA modeling is: d = 1 <b> <div>"
+    "<div class=\"alert alert-block alert-info\"\n",
+    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
+    "            max-width:900px; margin: 20px auto; text-align: center;\"> <b> After applying first differencing, the time series fluctuates around zero without a clear upward or downward trend — indicating stationarity. Therefore, the differencing order (d) for ARIMA modeling is: d = 1 <b> <div>"
    ]
   },
   {
@@ -830,7 +839,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\" style=\"background-color:#FFFFFF;color:#000000;border-color:black;width:100%;margin: auto;text-align: center;\"> <b> From the ACF and PACF plots, the autocorrelation and partial autocorrelation both cut off noticeably after lag 2.\n",
+    "<div class=\"alert alert-block alert-info\"\n",
+    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
+    "            max-width:900px; margin: 20px auto; text-align: center;\"> <b> From the ACF and PACF plots, the autocorrelation and partial autocorrelation both cut off noticeably after lag 2.\n",
     "\n",
     "Based on these plots, the suitable ARIMA parameters are: p=2,d=1,q=2 <b> <div>"
    ]
@@ -892,7 +903,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\" style=\"background-color:#FFFFFF;color:#000000;border-color:black;width:100%;margin: auto;text-align: center;\"> <b> After applying seasonal differencing with m = 7, the ADF test shows a very low p-value, confirming that the data is now stationary. \n",
+    "<div class=\"alert alert-block alert-info\"\n",
+    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
+    "            max-width:900px; margin: 20px auto; text-align: center;\"> <b> After applying seasonal differencing with m = 7, the ADF test shows a very low p-value, confirming that the data is now stationary. \n",
     "\n",
     "The seasonal component has been effectively removed. Therefore, for the SARIMA model, the seasonal differencing order is: D = 1, m = 7 <b> <div>"
    ]
@@ -957,7 +970,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\" style=\"background-color:#FFFFFF;color:#000000;border-color:black;width:100%;margin: auto;text-align: center;\"> <b> Based on these plots, we select P = 9 và q = 6 <b> <div>"
+    "<div class=\"alert alert-block alert-info\"\n",
+    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
+    "            max-width:900px; margin: 20px auto; text-align: center;\"> <b> Based on these plots, we select P = 9 và q = 6 <b> <div>"
    ]
   },
   {
@@ -1257,7 +1272,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\" style=\"background-color:#FFFFFF;color:#000000;border-color:black;width:100%;margin: auto;text-align: center;\"> <b>Although SARIMA captures general patterns, it doesn’t predict accurately enough for this dataset. It’s advisable to test other models such as Auto ARIMA and LSTM to compare performance and improve forecast accuracy. <b> <div>"
+    "<div class=\"alert alert-block alert-info\"\n",
+    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
+    "            max-width:900px; margin: 20px auto; text-align: center;\"><b>Although SARIMA captures general patterns, it doesn’t predict accurately enough for this dataset. It’s advisable to test other models such as Auto ARIMA and LSTM to compare performance and improve forecast accuracy. <b> <div>"
    ]
   },
   {
@@ -1961,7 +1978,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\" style=\"background-color:#FFFFFF;color:#000000;border-color:black;width:100%;margin: auto;text-align: center;\"> <b> From the plot, Auto ARIMA successfully captured the upward trend, but it failed to adapt to the sharp downward movement in stock prices.\n",
+    "<div class=\"alert alert-block alert-info\"\n",
+    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
+    "            max-width:900px; margin: 20px auto; text-align: center;\"><b> From the plot, Auto ARIMA successfully captured the upward trend, but it failed to adapt to the sharp downward movement in stock prices.\n",
     "\n",
     "This indicates the model performs well for stable or rising trends, but struggles with sudden market drops, implying a need for more flexible models such as LSTM for improved forecasting accuracy <b> <div>"
    ]
@@ -2043,7 +2062,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\" style=\"background-color:#FFFFFF;color:#000000;border-color:black;width:100%;margin: auto;text-align: center;\"> <b> For this dataset, the SARIMA model performs better, it produces lower forecast error (MAE), meaning its predictions are more accurate than those of the Auto ARIMA model. <b> <div>"
+    "<div class=\"alert alert-block alert-info\"\n",
+    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
+    "            max-width:900px; margin: 20px auto; text-align: center;\"> <b> For this dataset, the SARIMA model performs better, it produces lower forecast error (MAE), meaning its predictions are more accurate than those of the Auto ARIMA model. <b> <div>"
    ]
   },
   {
@@ -2855,7 +2876,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\" style=\"background-color:#FFFFFF;color:#000000;border-color:black;width:100%;margin: auto;text-align: center;\"> <b> The Random Forest model achieved the lowest MAE, meaning it performs better numerically than SARIMA and Auto ARIMA.\n",
+    "<div class=\"alert alert-block alert-info\"\n",
+    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
+    "            max-width:900px; margin: 20px auto; text-align: center;\"> <b> The Random Forest model achieved the lowest MAE, meaning it performs better numerically than SARIMA and Auto ARIMA.\n",
     "\n",
     "However, visual inspection of the prediction vs. actual plot shows that Random Forest struggles to capture trend reversals, especially at price peaks and drops, indicating that while it reduces average error, it may not generalize well for sudden time-series fluctuations. <b> <div>"
    ]
@@ -3528,7 +3551,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\" style=\"background-color:#FFFFFF;color:#000000;border-color:black;width:100%;margin: auto;text-align: center;\"> <b> The XGBoost model performs similarly to Random Forest, but does not show significant improvement.\n",
+    "<div class=\"alert alert-block alert-info\"\n",
+    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
+    "            max-width:900px; margin: 20px auto; text-align: center;\"><b> The XGBoost model performs similarly to Random Forest, but does not show significant improvement.\n",
     "However, both tree-based models outperform SARIMA and Auto ARIMA, achieving lower forecast errors overall, indicating that machine learning models capture nonlinear patterns in the time series more effectively. <b> <div>"
    ]
   },
@@ -4171,7 +4196,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\" style=\"background-color:#FFFFFF;color:#000000;border-color:black;width:100%;margin: auto;text-align: left;\"> <b>\n",
+    "<div class=\"alert alert-block alert-info\"\n",
+    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
+    "            max-width:900px; margin: 20px auto; text-align: center;\"><b>\n",
     "Continue comparing the MAE values of the models:\n",
     "<br>\n",
     "\n",
