--- a/2. Machine Learning/Time-Series-Forcasting.ipynb
+++ b/2. Machine Learning/Time-Series-Forcasting.ipynb
@@ -616,15 +616,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\"\n",
-    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
-    "            max-width:900px; margin: 20px auto; text-align: center;\"> <b>\n",
-    "\n",
-    "- The Trend component shows a clear long-term upward movement in Netflix’s stock price from 2018 to late 2021, followed by a noticeable decline in early 2022.\n",
-    "\n",
-    "- The Seasonal component remains almost constant around 1.0, suggesting no strong seasonal pattern in daily stock prices.\n",
-    "\n",
-    "- The Residual (noise) component fluctuates slightly around 1.0, indicating that most variation is explained by the trend rather than seasonality. <b> <div>"
+    "> - The Trend component shows a clear long-term upward movement in Netflix's stock price from 2018 to late 2021, followed by a noticeable decline in early 2022.\n",
+    "> - The Seasonal component remains almost constant around 1.0, suggesting no strong seasonal pattern in daily stock prices.\n",
+    "> - The Residual (noise) component fluctuates slightly around 1.0, indicating that most variation is explained by the trend rather than seasonality.\n"
    ]
   },
   {
