--- a/2. Machine Learning/Time-Series-Forcasting.ipynb
+++ b/2. Machine Learning/Time-Series-Forcasting.ipynb
@@ -787,9 +787,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\"\n",
-    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
-    "            max-width:900px; margin: 20px auto; text-align: center;\"> <b> After applying first differencing, the time series fluctuates around zero without a clear upward or downward trend — indicating stationarity. Therefore, the differencing order (d) for ARIMA modeling is: d = 1 <b> <div>"
+    "> After applying first differencing, the time series fluctuates around zero without a clear upward or downward trend — indicating stationarity. Therefore, the differencing order (d) for ARIMA modeling is: d = 1"
    ]
   },
   {
@@ -835,11 +833,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\"\n",
-    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
-    "            max-width:900px; margin: 20px auto; text-align: center;\"> <b> From the ACF and PACF plots, the autocorrelation and partial autocorrelation both cut off noticeably after lag 2.\n",
+    "> - From the ACF and PACF plots, the autocorrelation and partial autocorrelation both cut off noticeably after lag 2.\n",
     "\n",
-    "Based on these plots, the suitable ARIMA parameters are: p=2,d=1,q=2 <b> <div>"
+    "> - Based on these plots, the suitable ARIMA parameters are: p=2,d=1,q=2"
    ]
   },
   {
@@ -899,11 +895,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\"\n",
-    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
-    "            max-width:900px; margin: 20px auto; text-align: center;\"> <b> After applying seasonal differencing with m = 7, the ADF test shows a very low p-value, confirming that the data is now stationary. \n",
-    "\n",
-    "The seasonal component has been effectively removed. Therefore, for the SARIMA model, the seasonal differencing order is: D = 1, m = 7 <b> <div>"
+    "> - After applying seasonal differencing with m = 7, the ADF test shows a very low p-value, confirming that the data is now stationary. \n",
+    "> - The seasonal component has been effectively removed. Therefore, for the SARIMA model, the seasonal differencing order is: D = 1, m = 7"
    ]
   },
   {
@@ -966,9 +959,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\"\n",
-    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
-    "            max-width:900px; margin: 20px auto; text-align: center;\"> <b> Based on these plots, we select P = 9 và q = 6 <b> <div>"
+    "> Based on these plots, we select P = 9 và q = 6"
    ]
   },
   {
