--- a/2. Machine Learning/Time-Series-Forcasting.ipynb
+++ b/2. Machine Learning/Time-Series-Forcasting.ipynb
@@ -1965,11 +1965,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\"\n",
-    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
-    "            max-width:900px; margin: 20px auto; text-align: center;\"><b> From the plot, Auto ARIMA successfully captured the upward trend, but it failed to adapt to the sharp downward movement in stock prices.\n",
+    "- From the plot, Auto ARIMA successfully captured the upward trend, but it failed to adapt to the sharp downward movement in stock prices.\n",
     "\n",
-    "This indicates the model performs well for stable or rising trends, but struggles with sudden market drops, implying a need for more flexible models such as LSTM for improved forecasting accuracy <b> <div>"
+    "- This indicates the model performs well for stable or rising trends, but struggles with sudden market drops, implying a need for more flexible models such as LSTM for improved forecasting accuracy"
    ]
   },
   {
@@ -2049,9 +2047,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\"\n",
-    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
-    "            max-width:900px; margin: 20px auto; text-align: center;\"> <b> For this dataset, the SARIMA model performs better, it produces lower forecast error (MAE), meaning its predictions are more accurate than those of the Auto ARIMA model. <b> <div>"
+    "For this dataset, the SARIMA model performs better, it produces lower forecast error (MAE), meaning its predictions are more accurate than those of the Auto ARIMA model."
    ]
   },
   {
@@ -2863,11 +2859,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\"\n",
-    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
-    "            max-width:900px; margin: 20px auto; text-align: center;\"> <b> The Random Forest model achieved the lowest MAE, meaning it performs better numerically than SARIMA and Auto ARIMA.\n",
+    "The Random Forest model achieved the lowest MAE, meaning it performs better numerically than SARIMA and Auto ARIMA.\n",
     "\n",
-    "However, visual inspection of the prediction vs. actual plot shows that Random Forest struggles to capture trend reversals, especially at price peaks and drops, indicating that while it reduces average error, it may not generalize well for sudden time-series fluctuations. <b> <div>"
+    "However, visual inspection of the prediction vs. actual plot shows that Random Forest struggles to capture trend reversals, especially at price peaks and drops, indicating that while it reduces average error, it may not generalize well for sudden time-series fluctuations."
    ]
   },
   {
@@ -3538,10 +3532,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\"\n",
-    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
-    "            max-width:900px; margin: 20px auto; text-align: center;\"><b> The XGBoost model performs similarly to Random Forest, but does not show significant improvement.\n",
-    "However, both tree-based models outperform SARIMA and Auto ARIMA, achieving lower forecast errors overall, indicating that machine learning models capture nonlinear patterns in the time series more effectively. <b> <div>"
+    "The XGBoost model performs similarly to Random Forest, but does not show significant improvement.\n",
+    "However, both tree-based models outperform SARIMA and Auto ARIMA, achieving lower forecast errors overall, indicating that machine learning models capture nonlinear patterns in the time series more effectively."
    ]
   },
   {
@@ -4183,18 +4175,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\"\n",
-    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
-    "            max-width:900px; margin: 20px auto; text-align: center;\"><b>\n",
+    "\n",
     "Continue comparing the MAE values of the models:\n",
-    "<br>\n",
     "\n",
-    "• The LSTM deep learning model has the lowest error (8.11), giving the best performance.\n",
+    "• The LSTM deep learning model has the lowest error (8.11), giving the best performance\n",
     "\n",
-    "• Auto ARIMA has the highest MAE (86.59), indicating poor performance on this dataset.\n",
+    "• Auto ARIMA has the highest MAE (86.59), indicating poor performance on this dataset\n",
     "\n",
-    "• Other machine learning models such as Random Forest and XGBoost achieve lower MAE than traditional models like SARIMA and Auto ARIMA.\n",
-    "<b> <div>"
+    "• Other machine learning models such as Random Forest and XGBoost achieve lower MAE than traditional models like SARIMA and Auto ARIMA"
    ]
   },
   {
