--- a/2. Machine Learning/Time-Series-Forcasting.ipynb
+++ b/2. Machine Learning/Time-Series-Forcasting.ipynb
@@ -1259,9 +1259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\"\n",
-    "     style=\"background-color:#FFFFFF; color:#000000; border:1px solid black;\n",
-    "            max-width:900px; margin: 20px auto; text-align: center;\"><b>Although SARIMA captures general patterns, it doesn’t predict accurately enough for this dataset. It’s advisable to test other models such as Auto ARIMA and LSTM to compare performance and improve forecast accuracy. <b> <div>"
+    "> Although SARIMA captures general patterns, it doesn’t predict accurately enough for this dataset. It’s advisable to test other models such as Auto ARIMA and LSTM to compare performance and improve forecast accuracy."
    ]
   },
   {
